--- a/contactos.html
+++ b/contactos.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Contactos</h1>
+    <ul>
+        <li><a href="index.html"> Inicio </a></li>
+        <li><a href="servicios.html"> Servicios </a></li>
+        <li><a href="quienes.html"> Quienes somos </a></li>
+        <li><a href="productos.html"> Productos </a></li>
+        <li><a href="contactos.html"> Contactos</a></li>
+    </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius atque modi provident! Veritatis quasi laboriosam animi ab ipsum ut nesciunt sint, rem cum corporis autem magni assumenda unde exercitationem. Nemo.</p>
     <form action="">
         <label for="">Nonmbre</label>
