--- a/quienes.html
+++ b/quienes.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Quienes somos</h1>
+    <ul>
+        <li><a href="index.html"> Inicio </a></li>
+        <li><a href="servicios.html"> Servicios </a></li>
+        <li><a href="quienes.html"> Quienes somos </a></li>
+        <li><a href="productos.html"> Productos </a></li>
+        <li><a href="contactos.html"> Contactos</a></li>
+    </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure mollitia necessitatibus labore esse. Vel illo saepe accusamus voluptas dolorem optio itaque, doloremque ratione sunt quisquam autem, laborum iure consequuntur! Dicta!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis nobis, molestias itaque pariatur ipsam praesentium accusamus quia magni nisi, voluptas nostrum voluptates beatae fugiat, esse unde? Perferendis, hic odio!</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam reiciendis, alias non dolore explicabo libero architecto quod tempore ipsa vitae quos blanditiis. Quam natus quos, illum fugiat accusamus ducimus nam.</p>
