--- a/productos.html
+++ b/productos.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto
+    <title>Portafolio
     </title>
 </head>
 <body>
-    <h1>Producto</h1>
+    <h1>Portafolio</h1>
     <ul>
         <li><a href="index.html"> Inicio </a></li>
         <li><a href="servicios.html"> Servicios </a></li>
